--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Gemstones&display=swap');
+
 body {
     text-align: center;
+    font-family: 'Rubik Gemstones', cursive;
 }
 
 h1 {
-    font-family: Monoton;
     font-size: 70px;
     margin: 0.2em;
 }
